--- a/src/Demo/NLog.config
+++ b/src/Demo/NLog.config
@@ -4,11 +4,12 @@
   <extensions>
     <add assembly="NLog.SignalR"/>
   </extensions>
+  
   <targets>
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${message}" />
     <target xsi:type="SignalR" name="signalr"
-            layout="${longdate} ${uppercase:${level}} ${message}" />
+            layout="${logger}::${message}" />
   </targets>
 
   <rules>
