Added more tests around the target to handle failure conditions.

--- a/src/NLog.SignalR/NLog.SignalR.csproj
+++ b/src/NLog.SignalR/NLog.SignalR.csproj
@@ -54,8 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HubProxyFactory.cs" />
-    <Compile Include="IHubProxyFactory.cs" />
+    <Compile Include="HubProxy.cs" />
     <Compile Include="ILoggingHub.cs" />
     <Compile Include="LogEvent.cs" />
     <Compile Include="SignalRTarget.cs" />
