--- a/src/NLog.SignalR.IntegrationTests/packages.config
+++ b/src/NLog.SignalR.IntegrationTests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FluentAssertions" version="3.1.229" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Client" version="2.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.1.1" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.0.1" targetFramework="net45" />
@@ -11,6 +12,7 @@
   <package id="Microsoft.Owin.SelfHost" version="2.0.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="NLog" version="3.1.0.0" targetFramework="net45" />
+  <package id="NSubstitute" version="1.7.2.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
 </packages>
