Updated the license and project references.

--- a/src/NLog.SignalR/NLog.SignalR.nuspec
+++ b/src/NLog.SignalR/NLog.SignalR.nuspec
@@ -6,8 +6,8 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <licenseUrl>https://raw.githubusercontent.com/cbley/NLog.SignalR/master/LICENSE</licenseUrl>
-    <projectUrl>https://github.com/cbley/NLog.SignalR</projectUrl>
+    <licenseUrl>https://raw.githubusercontent.com/toddmeinershagen/NLog.SignalR/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/toddmeinershagen/NLog.SignalR</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>Custom NLog target for send logs to a SignalR hub.  This release is based on SignalR 2.0.</releaseNotes>
